# EP-5-Softw-2

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/ep5_actions/: __init__.py  statistics.py
tests/: test_statistics.py
